Update 'ov2541f7v-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:09ff1334ea114888cd775513e897bd236ebc377a@sha256:1ba953e19834ce3b05ab28668eb880ab06dd4c79fcf912bc241ca74e4c5774ba

--- a/components/ov2541f7v-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/ov2541f7v-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ov2541f7v-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:09ff1334ea114888cd775513e897bd236ebc377a@sha256:1ba953e19834ce3b05ab28668eb880ab06dd4c79fcf912bc241ca74e4c5774ba
+          name: container-image
